--- a/Issues/sociallink/index6.html
+++ b/Issues/sociallink/index6.html
@@ -15,8 +15,8 @@
 
 
 	<meta property="og:title" content="title title title title title title title title title title title title ">
-	<meta property="og:url" content="http://localhost:8081/demo/sociallink/index7.html">
-	<meta property="og:image" content="http://localhost:8081/demo/sociallink/img/1-774014.jpg">
+	<meta property="og:url" content="http://shmdhussain.github.io/WebTest/Issues/sociallink/index7.html">
+	<meta property="og:image" content="http://shmdhussain.github.io/WebTest/Issues/sociallink/img/1-774014.jpg">
 	<meta property="og:image:width" content="600">
 	<meta property="og:image:height" content="315">
 	<meta property="og:description" content="desc1 desc1 desc1 desc1 desc1 desc1 desc1 desc1 desc1 desc1 desc1 desc1 sc1 desc1 desc1 desc1 desc1 desc1sc1 desc1 desc1 desc1 desc1 desc1sc1 desc1 desc1 desc1 desc1 desc1">
@@ -27,7 +27,6 @@
 
 
 	<title data-ng-bind="pageTitle" class="ng-binding">my page</title>
-	<link rel="shortcut icon" type="image/ico" href="http://asset1.beta.skynewsarabia.com/web/asset/9.0/img/favicon.ico"> 
 	<style type="text/css">
 	 a.linkedin-icon {
 	    background: url("http://asset1.beta.skynewsarabia.com/web/asset/9.0/img/menu-icons/linkedin-icon.jpg") 0 0 no-repeat;
@@ -42,6 +41,6 @@
 <body>
 
 	Welcome to HTML BoilerPlate!!!
-	<a class="linkedin-icon" target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http://localhost:8081/demo/sociallink/index7.html" ></a>
+	<a class="linkedin-icon" target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http://shmdhussain.github.io/WebTest/Issues/sociallink/index7.html" ></a>
 </body>
 </html>
