changed asset urls

--- a/Issues/sociallink/index8.html
+++ b/Issues/sociallink/index8.html
@@ -71,7 +71,7 @@
 
 <body>
 
-	Welcome to HTML BoilerPlate!!!
+	Welcome to HTML BoilerPlatexxxx!!!
 	<a class="linkedin-icon" target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=http://www.beta.skynewsarabia.com/web/image/774862/4&title=اللاعب الصربي حقق لقبه الثاني في بطولة أميركا المفتوحة بعد لقب عام 2011&summary=undefined" ></a>
 </body>
 </html>
