changed asset urls

--- a/Issues/sociallink/index10.html
+++ b/Issues/sociallink/index10.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html prefix="og: http://ogp.me/ns#" lang="ar" dir="rtl">
 	<head>
 	<style type="text/css">
 	@charset "UTF-8";[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}ng\:form{display:block;}.ng-animate-shim{visibility:hidden;}.ng-anchor{position:absolute;}
