--- a/Issues/sociallink/index14.html
+++ b/Issues/sociallink/index14.html
@@ -5,7 +5,7 @@
 
 
 	<!-- Add the following three tags inside head. -->
-	<meta itemprop="name" content="هل يكره الإخوان الشعب؟!">
+	<meta itemprop="name" content="ddهل يكره الإخوان الشعب؟!">
 	<meta itemprop="description" content="منذ أطاح الطوفان البشري الذي غمر شوارع مصر وميادينها في الثلاثين من يونيو بحكم جماعة الإخوان، وأنا حريص على عدم الكتابة عن قيادات تلك الجماعة الذين اقتربت من غالبيتهم فى مواقع عدة خلال العقدين الأخيرين.">
 	<meta itemprop="image" content="http://www.beta.skynewsarabia.com/web/images/2015/03/19/731985/600/315/1-731985.jpg">
 
