--- a/Issues/sociallink/index15c.html
+++ b/Issues/sociallink/index15c.html
@@ -27,7 +27,7 @@
 <body>
 
 	Welcome to HTML BoilerPlate!!!
-	<a class="linkedin-icon" target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https://www.linkedin.com/shareArticle?mini=true&url=http://www.beta.skynewsarabia.com/web/blog/731978/%D8%A7%D9%95%D8%B5%D8%B1%D8%A7%D8%B1-%D8%A7%D9%94%D8%B9%D8%B6%D8%A7%D8%A1-%D8%A7%D9%84%D8%AC%D9%85%D8%A7%D8%B9%D8%A9-%D9%85%D8%AD%D8%A7%D8%B1%D8%A8%D8%A9-%D8%A7%D9%84%D9%85%D8%AC%D8%AA%D9%85%D8%B9-%D8%A7%D9%84%D8%B0%D9%89-%D8%AE%D8%B0%D9%84%D9%87%D9%85-%D9%88%D9%88%D9%82%D9%81-%D8%B6%D8%AF-%D8%B3%D9%8A%D8%A7%D8%B3%D8%AA%D9%87%D9%85-%D9%88%D9%87%D9%85-%D8%A8%D8%B0%D9%84%D9%83-%D9%8A%D9%82%D8%B7%D8%B9%D9%88%D9%86-%D8%AE%D9%8A%D9%88%D8%B7-%D8%A7%D9%84%D9%88&title=هل يكره الإخوان الشعب؟!&summary=منذ أطاح الطوفان البشري الذي غمر شوارع مصر وميادينها في الثلاثين من يونيو بحكم جماعة الإخوان، وأنا حريص على عدم الكتابة عن قيادات تلك الجماعة الذين اقتربت من غالبيتهم فى مواقع عدة خلال العقدين الأخيرين." ></a>
+	<a class="linkedin-icon" target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http://www.beta.skynewsarabia.com/web/blog/731978/%D8%A7%D9%95%D8%B5%D8%B1%D8%A7%D8%B1-%D8%A7%D9%94%D8%B9%D8%B6%D8%A7%D8%A1-%D8%A7%D9%84%D8%AC%D9%85%D8%A7%D8%B9%D8%A9-%D9%85%D8%AD%D8%A7%D8%B1%D8%A8%D8%A9-%D8%A7%D9%84%D9%85%D8%AC%D8%AA%D9%85%D8%B9-%D8%A7%D9%84%D8%B0%D9%89-%D8%AE%D8%B0%D9%84%D9%87%D9%85-%D9%88%D9%88%D9%82%D9%81-%D8%B6%D8%AF-%D8%B3%D9%8A%D8%A7%D8%B3%D8%AA%D9%87%D9%85-%D9%88%D9%87%D9%85-%D8%A8%D8%B0%D9%84%D9%83-%D9%8A%D9%82%D8%B7%D8%B9%D9%88%D9%86-%D8%AE%D9%8A%D9%88%D8%B7-%D8%A7%D9%84%D9%88" ></a>
 	<a class="linkedin-icon" target="_blank" href="https://plus.google.com/share?url=http://shmdhussain.github.io/WebTest/Issues/sociallink/index16.html&hl=ar" >google plus</a>
 </body>
 </html>
