check in for g+ issues

--- a/Issues/sociallink/index17.html
+++ b/Issues/sociallink/index17.html
@@ -24,7 +24,7 @@
     Welcome to HTML BoilerPlate!!!
 	 
     <!-- <a class="google-plus-icon" target="_blank" href="https://plus.google.com/share?url=http://www.skynewsarabia.com/web/article/778821/هادي-إيران-عرقلت-الانتقال-السياسي-اليمن"></a> -->
-    <a class="google-plus-icon" target="_blank" href="http://shmdhussain.github.io/WebTest/Issues/sociallink/index17.html"></a>
+    <a class="google-plus-icon" target="_blank" href="https://plus.google.com/share?url=http://shmdhussain.github.io/WebTest/Issues/sociallink/index17.html"></a>
     <div class="small-12 columns ng-scope" data-ng-if="article.mediaAsset.type=='IMAGE_SET'"> 
     	<img class="main-image" style="width: 100%; visibility: visible;" onload="showImage();" src="http://shmdhussain.github.io/WebTest/Issues/sociallink/img/un.jpg"/>
         <div class="article_image_heading_bg"> </div>
