--- a/Issues/sociallink/fbissue.html
+++ b/Issues/sociallink/fbissue.html
@@ -18,11 +18,11 @@
         <!-- Add the following three tags inside head. -->
         <meta itemprop="name" content="testing headline" />
         <meta itemprop="description" content="testing summary" />
-        <meta itemprop="image" content="http://www.skynewsarabia.com/web/images/2015/12/07/793180/600/315/1-793180.jpg" />
+        <meta itemprop="image" content="http://shmdhussain.github.io/WebTest/Issues/sociallink/img/un.jpg" />
         <meta property="og:title" content="testing headline" />
-        <meta property="og:url" content="http://www.skynewsarabia.com/web/article/793201/testing-headline" />
-        <meta property="og:image" content="http://www.skynewsarabia.com/web/images/2015/12/07/793180/600/315/1-793180.jpg" />
-        <meta property="og:image:url" content="http://www.skynewsarabia.com/web/images/2015/12/07/793180/600/315/1-793180.jpg" />
+        <meta property="og:url" content="http://shmdhussain.github.io/WebTest/Issues/sociallink/fbissue.html" />
+        <meta property="og:image" content="http://shmdhussain.github.io/WebTest/Issues/sociallink/img/un.jpg" />
+        <meta property="og:image:url" content="http://shmdhussain.github.io/WebTest/Issues/sociallink/img/un.jpg" />
         <meta property="og:image:width" content="600" />
         <meta property="og:image:height" content="315" />
         <meta property="og:description" content="testing summary" />
