instant articles commit

--- a/instant_articles_html/breaking_news_template_script_tag.html
+++ b/instant_articles_html/breaking_news_template_script_tag.html
@@ -244,7 +244,7 @@
 						}
 			    	</style>
 	    			<div class="sna_ia_widget_cont"></div>
-	    			<script src="http://10.64.161.22:1337/vorlon.js"></script>
+	    			<script src="https://jsconsole.com/js/remote.js?mytest_sh"></script>
 					<script src="https://shmdhussain.github.io/WebTest/instant_articles_html/breaking_news_template.js"></script>
 	    '>
 		
