instant articles commit

--- a/instant_articles_html/breaking_news_template_script_tag.html
+++ b/instant_articles_html/breaking_news_template_script_tag.html
@@ -244,7 +244,7 @@
 						}
 			    	</style>
 	    			<div class="sna_ia_widget_cont"></div>
-	    			<script src="https://jsconsole.com/js/remote.js?mytest_sh"></script>
+	    			<script src="https://jsconsole.com/js/remote.js?186853f8-4557-4ced-862f-4d628885dc6b"></script>
 					<script src="https://shmdhussain.github.io/WebTest/instant_articles_html/breaking_news_template.js"></script>
 	    '>
 		
