instant articles commit

--- a/instant_articles_html/breaking_news_template_script_tag.html
+++ b/instant_articles_html/breaking_news_template_script_tag.html
@@ -120,6 +120,9 @@
 						    line-height: 1.5;
 						    font-family: "HelveticaNeueReg";
 						}
+						.sna_ia_widget_cont{
+							padding:15px;
+						}
 						.sna_title_1{
 							font-size: 22px;
 							min-height: 35px;
