instant articles commit

--- a/instant_articles_html/breaking_news_template_script_tag.html
+++ b/instant_articles_html/breaking_news_template_script_tag.html
@@ -120,8 +120,20 @@
 						    line-height: 1.5;
 						    font-family: "HelveticaNeueReg";
 						}
-						.sna_ia_widget_cont{
-							padding:15px;
+						.article-widget-holder{
+							margin-top: 0;
+							padding-left: 0;
+							padding-right: 0;
+							margin-right: 10px;
+							margin-left: 10px;
+							margin-bottom: 20px;
+						}
+
+						.breaking_news_widget{
+
+						    border-bottom: 1px solid #c5c5c5;
+						    border-left: 1px solid #c5c5c5;
+						    border-right: 1px solid #c5c5c5;
 						}
 						.sna_title_1{
 							font-size: 22px;
@@ -246,8 +258,7 @@
 						    margin-right: 10px;
 						}
 			    	</style>
-	    			<div class="sna_ia_widget_cont"></div>
-	    			<script src="https://jsconsole.com/js/remote.js?186853f8-4557-4ced-862f-4d628885dc6b"></script>
+	    			<div dir="rtl" lang="ar" class="article-widget-holder breaking_news_widget"></div>
 					<script src="https://shmdhussain.github.io/WebTest/instant_articles_html/breaking_news_template.js"></script>
 	    '>
 		
