instant articles commit

--- a/instant_articles_html/watch_now_template_script_tag.html
+++ b/instant_articles_html/watch_now_template_script_tag.html
@@ -84,34 +84,34 @@
 
 			    	    			@font-face {
 			    	    			    font-family: "HelveticaNeueBold";
-			    	    			    src:    url("/static/web-rev/styles/sna-font/HelveticaNeueW23forSKY-Bd_T02.eot?#iefix") format("embedded-opentype"),
-			    	    			            url("/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Bd_web.woff2") format("woff2"),
-			    	    			            url("/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Bd_web.woff") format("woff"),
-			    	    			            url("/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Bd_web.ttf") format("truetype"),
-			    	    			            url("/static/web-rev/styles/sna-font/HelveticaNeueW23forSKY-Bd_T02.svg#HelveticaNeueW23forSKY-Bd_T02") format("svg");
+			    	    			    src:    url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueW23forSKY-Bd_T02.eot?#iefix") format("embedded-opentype"),
+			    	    			            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Bd_web.woff2") format("woff2"),
+			    	    			            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Bd_web.woff") format("woff"),
+			    	    			            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Bd_web.ttf") format("truetype"),
+			    	    			            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueW23forSKY-Bd_T02.svg#HelveticaNeueW23forSKY-Bd_T02") format("svg");
 			    	    			    font-weight: 800;
 			    	    			    font-style: normal;
 			    	    			}
 
 			    	    			@font-face {
 			    	    			    font-family: "HelveticaNeueReg";
-			    	    			    src:    url("/static/web-rev/styles/sna-font/HelveticaNeueW23forSKY-Reg_T02.eot?#iefix") format("embedded-opentype"),
-			    	    			            url("/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Rg_web.woff2") format("woff2"),
-			    	    			            url("/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Rg_web.woff") format("woff"),
-			    	    			            url("/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Rg_web.ttf") format("truetype"),
-			    	    			            url("/static/web-rev/styles/sna-font/HelveticaNeueW23forSKY-Reg_T02.svg#HelveticaNeueW23forSKY-Reg_T02") format("svg");
+			    	    			    src:    url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueW23forSKY-Reg_T02.eot?#iefix") format("embedded-opentype"),
+			    	    			            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Rg_web.woff2") format("woff2"),
+			    	    			            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Rg_web.woff") format("woff"),
+			    	    			            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Rg_web.ttf") format("truetype"),
+			    	    			            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueW23forSKY-Reg_T02.svg#HelveticaNeueW23forSKY-Reg_T02") format("svg");
 			    	    			    font-weight: 400;
 			    	    			    font-style: normal;
 			    	    			}
 			    					
 			    					@font-face {
 			    					    font-family: "sna-icons";
-			    					    src:    url("/static/web-rev/styles/sna-icons/snaicons.eot");
-			    					    src:    url("/static/web-rev/styles/sna-icons/snaicons.eot?#iefix") format("embedded-opentype"),
-			    					            url("/static/web-rev/styles/sna-icons/snaicons.woff2") format("woff2"),
-			    					            url("/static/web-rev/styles/sna-icons/snaicons.woff") format("woff"),
-			    					            url("/static/web-rev/styles/sna-icons/snaicons.ttf") format("truetype"),
-			    					            url("/static/web-rev/styles/sna-icons/snaicons.svg#snaicons") format("svg");
+			    					    src:    url("https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.eot");
+			    					    src:    url("https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.eot?#iefix") format("embedded-opentype"),
+			    					            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.woff2") format("woff2"),
+			    					            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.woff") format("woff"),
+			    					            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.ttf") format("truetype"),
+			    					            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.svg#snaicons") format("svg");
 			    					    font-weight: 400;
 			    					    font-style: normal;
 			    					}
