instant articles commit

--- a/instant_articles_html/watch_now_template_script_tag.html
+++ b/instant_articles_html/watch_now_template_script_tag.html
@@ -258,6 +258,35 @@
 									    padding-bottom: 0;
 									    padding-right: 8px;
 									}
+									.content_list_media_indicator{
+										position: absolute;
+										top: 0px;
+										left: 0px;
+										background-color: rgba(83,131,180,0.8);
+										z-index: 1;
+										display: -ms-flexbox;
+										display: -webkit-flex;
+										display: flex;
+										align-items: center;
+										padding: 3px 6px;
+									}
+									.content_list_media_indicator_text {
+									    color: #FFF;
+									    line-height: 1;
+									    font-family: HelveticaNeueBold;
+									    padding-left: 6px;
+									    top: 2px;
+									    position: relative;
+									    font-size: 0.75rem;
+									}
+									.content_list_media_indicator_svg_cont {
+									    font-size: 0;
+									}
+									.content_list_media_indicator_svg {
+									    width: 16px;
+									    height: 16px;
+									    max-width: 100%;
+									}
 			    		    	</style>
 	    		    			<div dir="rtl" lang="ar" class="article-widget-holder editor-choice-widget"></div>
 								<script src="https://shmdhussain.github.io/WebTest/instant_articles_html/watch_now_template.js"></script>
