instant articles commit

--- a/instant_articles_html/watch_now_template_script_tag.html
+++ b/instant_articles_html/watch_now_template_script_tag.html
@@ -209,6 +209,7 @@
 			    					.watch_now_content_item > a .editor-choice-img{
 										flex: 0 0 auto;
 										width:40%;
+										position:relative;
 			    					}
 
 
