--- a/instant_articles_html/breaking_news_template_script_tag.html
+++ b/instant_articles_html/breaking_news_template_script_tag.html
@@ -28,7 +28,7 @@
 
 			    	<link rel="stylesheet" type="text/css" href="https://shmdhussain.github.io/WebTest/instant_articles_html/breaking_news_styles.css">
 	    			<div dir="rtl" lang="ar" class="article-widget-holder breaking_news_widget"></div>
-					<script src="https://shmdhussain.github.io/WebTest/instant_articles_html/breaking_news_template.js"></script>
+					<script src="https://www.snawebdevtest.com/static/instant-article/test/js/breaking_news_template.js"></script>
 	    '>
 		
 
