--- a/instant_articles_html/watch_now_template_script_tag.html
+++ b/instant_articles_html/watch_now_template_script_tag.html
@@ -27,7 +27,7 @@
 	    <iframe onload="iframeOnload(this)" srcdoc='
 			    		    	<link rel="stylesheet" type="text/css" href="https://shmdhussain.github.io/WebTest/instant_articles_html/watch_now_styles.css">
 	    		    			<div dir="rtl" lang="ar" class="article-widget-holder editor-choice-widget"></div>
-								<script src="https://shmdhussain.github.io/WebTest/instant_articles_html/watch_now_template.js"></script>
+								<script src="https://www.snawebdevtest.com/static/instant-article/test/js/watchNowTemplate.js"></script>
 	    '>
 		
 
