added poll daddy canteen poll

--- a/poll_daddy_demo/canteen_poll.html
+++ b/poll_daddy_demo/canteen_poll.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+HelveticaNeueBold<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8"/>
@@ -131,6 +131,19 @@
 				-moz-box-shadow: 0 0 0 4px #e1e1e1;
 				-webkit-box-shadow: 0 0 0 4px #e1e1e1;
 			}
+
+			#poll_daddy_embed_page  .pds-vote .pds-links {
+				display:none;
+			}
+
+			#poll_daddy_embed_page  .pds-vote .pds-links-back {
+				display:none;
+			}
+			
+			#poll_daddy_embed_page  .pds-answer .pds-feedback-per{
+				font-family:HelveticaNeueBold  !important ;
+			}
+
 
 		</style>
 
