added poll daddy canteen poll

--- a/poll_daddy_demo/canteen_poll.html
+++ b/poll_daddy_demo/canteen_poll.html
@@ -19,6 +19,7 @@
 			body{
 				min-height: 100vh;
 				background-color: #1a439f;
+				margin: 0;
 			}
 			
 			.sna_logo {
@@ -71,11 +72,14 @@
 			    background-color: white;
 			    max-width: 1040px;
 			    margin: 0 auto;
-			    margin-top: 130px;
+			    margin-top: 50px;
 			    padding: 10px;
 			}
 			
 			@media only print, screen and (min-width: 768px){
+				#poll_daddy_embed_page .pds-box {
+				    margin-top: 130px;
+				}
 				#poll_daddy_embed_page .pds-box {
 				    
 				    padding: 40px;
