Updating Changes to the Git Repo , may be default msg

--- a/poll_daddy_demo/canteen_poll.html
+++ b/poll_daddy_demo/canteen_poll.html
@@ -216,7 +216,7 @@
 		
 		
 		<script type="text/javascript" charset="utf-8" src="https://secure.polldaddy.com/p/10346068.js"></script>
-		<noscript><a href="https://poll.fm/10346068">What we should name the new Canteen ?</a></noscript>
+		<noscript><a href="https://poll.fm/10346068">What we should name the new Canteen? / ماذا يجب أن نسمي مقص&#160</a></noscript>
 
 
 		
