Updating Changes to the Git Repo , may be default msg

--- a/poll_daddy_demo/canteen_poll.html
+++ b/poll_daddy_demo/canteen_poll.html
@@ -123,7 +123,7 @@
 			* {
 				font-family: "HelveticaNeueReg"  !important;
 			}
-			#poll_daddy_embed_page .pds-box {
+			body#poll_daddy_embed_page .pds-box {
 			    background-color: white;
 			    max-width: 1040px;
 			    margin: 0 auto;
@@ -132,17 +132,17 @@
 			}
 			
 			@media only print, screen and (min-width: 768px){
-				#poll_daddy_embed_page .pds-box {
+				body#poll_daddy_embed_page .pds-box {
 				    margin-top: 130px;
 				}
-				#poll_daddy_embed_page .pds-box {
+				body#poll_daddy_embed_page .pds-box {
 				    
 				    padding: 40px;
 				}
 
 			}
 
-			#poll_daddy_embed_page .pds-question{
+			body#poll_daddy_embed_page .pds-question{
 				background: linear-gradient(to bottom,#999999 0%,#999999 50%,#888888 50%,#888888 100%);
 				color: white;
 				font-size: 18px;
@@ -150,21 +150,21 @@
 			}
 			
 
-			#poll_daddy_embed_page  .pds-answer{
+			body#poll_daddy_embed_page  .pds-answer{
 				background: #eee;
 				padding: 0 20px 30px;
 			}
 
-			#poll_daddy_embed_page  .pds-answer label{
+			body#poll_daddy_embed_page  .pds-answer label{
 				padding-top: 20px;
 				display: inline-block;
 				padding-left: 10px;
 				cursor: pointer;
 			}
-			#poll_daddy_embed_page .pds-vote{
+			body#poll_daddy_embed_page .pds-vote{
 				text-align: center;
 			}
-			#poll_daddy_embed_page .pds-vote a{
+			body#poll_daddy_embed_page .pds-vote a{
 				margin-top: 20px;
 				background-color: #ca4f49;
 				background: -webkit-gradient(linear,left top,left bottom,color-stop(0.05,#ca4f49),color-stop(1,#982414));
@@ -191,15 +191,15 @@
 				-webkit-box-shadow: 0 0 0 4px #e1e1e1;
 			}
 
-			#poll_daddy_embed_page  .pds-vote .pds-links {
+			body#poll_daddy_embed_page  .pds-vote .pds-links {
 				display:none;
 			}
 
-			#poll_daddy_embed_page  .pds-vote .pds-links-back {
+			body#poll_daddy_embed_page  .pds-vote .pds-links-back {
 				display:none;
 			}
 			
-			#poll_daddy_embed_page  .pds-answer .pds-feedback-per{
+			body#poll_daddy_embed_page  .pds-answer .pds-feedback-per{
 				font-family:HelveticaNeueBold  !important ;
 			}
 
