--- a/instant_articles_html/featured_matches_template_script_tag.html
+++ b/instant_articles_html/featured_matches_template_script_tag.html
@@ -26,9 +26,9 @@
 	    
 	    <iframe onload="iframeOnload(this)" srcdoc='
 
-			    	<link rel="stylesheet" type="text/css" href="http://10.64.161.22:8088/instant_article_test/css/featured-match-styles.css">
+			    	<link rel="stylesheet" type="text/css" href="featured-match-styles.css">
 	    			<div dir="rtl" lang="ar" class="article-widget-holder sidebar_featured_match_comp"></div>
-					<script src="http://10.64.161.22:8088/instant_article_test/comp/featuredMatchesComp.js"></script>
+					<script src="featuredMatchesComp.js"></script>
 	    '>
 		
 
