left out code for featured matches

--- a/instant_articles_html/featured_matches_template_script_tag.html
+++ b/instant_articles_html/featured_matches_template_script_tag.html
@@ -26,9 +26,9 @@
 	    
 	    <iframe onload="iframeOnload(this)" srcdoc='
 
-			    	<link rel="stylesheet" type="text/css" href="featured-match-styles.css">
+			    	<link rel="stylesheet" type="text/css" href="https://shmdhussain.github.io/WebTest/instant_articles_html/featured-match-styles.css">
 	    			<div dir="rtl" lang="ar" class="article-widget-holder sidebar_featured_match_comp"></div>
-					<script src="featuredMatchesComp.js"></script>
+					<script src="https://shmdhussain.github.io/WebTest/instant_articles_html/featuredMatchesComp.js"></script>
 	    '>
 		
 
