Updating Changes to the Git Repo , may be default msg

--- a/usmap_banner/usmap/app/index_big_screen.html
+++ b/usmap_banner/usmap/app/index_big_screen.html
@@ -454,7 +454,7 @@
             <!--END:  map container-->
 
             <!--START:  Legends Bar-->
-            <div class="sna_usem_legend_cont hide">
+            <div class="sna_usem_legend_cont ">
 
                 <div class="sna_usem_legend_item sna_usem_legend_item_dem">
                     <div class="sna_usem_legend_item_color">
