Updating Changes to the Git Repo , may be default msg

--- a/usmap_banner/usmap/app/index.html
+++ b/usmap_banner/usmap/app/index.html
@@ -344,7 +344,7 @@
         <script>
             window.addEventListener('DOMContentLoaded', function(event) {
 
-                var apiUrl = 'http://vmtwebuselections.ext.webdev.skynewsarabia.com/rest/national-result.json',
+                var apiUrl = 'https://uselection.skynewsarabia.com/rest/national-result.json',
                 
                 interval = 30000;  // 1000 = 1 second, 3000 = 3 seconds
                 function getData() {
