Updating Changes to the Git Repo , may be default msg

--- a/usmap_banner/usmap/app/index.html
+++ b/usmap_banner/usmap/app/index.html
@@ -289,7 +289,7 @@
         
         
         <div class="counter-widget" id="countDown">
-            <a href="/us-election/map" title="الانتخابات الامريكية 2020">
+            <a href="javascript:void(0)" title="الانتخابات الامريكية 2020">
                 <div class="counter-main">
                     <div class="use-logo">
                         <img src="https://www.skynewsarabia.com/static/web-rev/img/us-elections/2020/us-election-logo.svg" alt="us-election-logo">
