--- a/instant_articles_html/breaking_news_template_script_tag.html
+++ b/instant_articles_html/breaking_news_template_script_tag.html
@@ -25,10 +25,11 @@
 	<body>
 	    
 	    <iframe onload="iframeOnload(this)" srcdoc='
-
-			    	<link rel="stylesheet" type="text/css" href="https://shmdhussain.github.io/WebTest/instant_articles_html/breaking_news_styles.css">
+			    	<link rel="stylesheet" type="text/css" href="breaking_new_styles_min_for_prod.css">
+			    	<!-- <link rel="stylesheet" type="text/css" href="breaking_news_styles.css"> -->
 	    			<div dir="rtl" lang="ar" class="article-widget-holder breaking_news_widget"></div>
-					<script src="https://www.snawebdevtest.com/static/web-rev/instant-article/js/breakingNewsTemplate.js"></script>
+	    			<script>window.domain="https://www.skynewsarabia.com";</script>
+					<script src="http://localhost:8080/static/web-rev/instant-article/js/breakingNewsTemplate.js"></script>
 	    '>
 		
 
