Updating Changes to the Git Repo , may be default msg

--- a/Issues/bg_img_chrome_not_loaded_issue/index.html
+++ b/Issues/bg_img_chrome_not_loaded_issue/index.html
@@ -130,7 +130,7 @@
 			.dyna_add_image a::after{
 				content: " ";
 			    width: 32px;
-			    background-image: url(../img/content_go_arrow.svg);
+			    background-image: url(https://asset1.skynewsarabia.com/asset/1643183702/435B12FA9EC31F9CA58FCB5D876EE039/assets/img/svg-icons/content_go_arrow.svg);
 			    background-repeat: no-repeat;
 			    background-position: center center;
 			    background-size: 13px 15px;
