adding html files

--- a/mars_hope_probe/html/index_web.html
+++ b/mars_hope_probe/html/index_web.html
@@ -78,7 +78,7 @@
 		    			<!--END:  covered distance info box-->
 
 		    			<!--START:  remaining days distance info box-->
-			    		<div class="mars_probe_ch_info_box remaining_time">
+			    		<div class="mars_probe_ch_info_box remaining_time hide">
 			    			<div class="mars_probe_ch_info_box_svg_cont">
 			    				<img class="mars_probe_ch_info_box_svg" src="https://www.skynewsarabia.com/hope_mars_probe/time.svg" alt="المسافة المقطوعة">
 			    			</div>
