--- a/mars_hope_probe/html/section_hope_mars_prod_cus.html
+++ b/mars_hope_probe/html/section_hope_mars_prod_cus.html
@@ -451,10 +451,12 @@
 	            hopeMarsProbeData.estimatedTemp = 0;
 	            hopeMarsProbeData.estimatedDistanceCovered = (response[1].distance_travelled - response[0].distance_travelled) / timeDiffBetweenCurrentAndEstimated;
 	            hopeMarsProbeData.estimatedSpeed = (response[1].speed - response[0].speed) / timeDiffBetweenCurrentAndEstimated;
+	            hopeMarsProbeData.estimatedDistanceLeft = (response[1].distance_left - response[0].distance_left) / timeDiffBetweenCurrentAndEstimated;
 
 	            hopeMarsProbeData.lastObservedTemp = 7.33;
 	            hopeMarsProbeData.lastObservedDistanceCovered = response[0].distance_travelled;
 	            hopeMarsProbeData.lastObservedSpeed = response[0].speed;
+	            hopeMarsProbeData.lastObservedDistanceLeft = response[0].distance_left;
 
 	            hopeMarsProbeData.lastObservedTime = response[0].time;
 	        }
@@ -468,9 +470,9 @@
 	            // var currentTimeStamp = 1612749420 * 1000 + j // TO BE commented 
 	            var d = hopeMarsProbeData;
 	            var temperature = 7.33;
-	            var covered     = Math.min(Math.floor(hopeMarsProbeData.totalDistance), Math.floor(d.lastObservedDistanceCovered + (d.estimatedDistanceCovered * (currentTimeStamp - d.lastObservedTime))));
-	            var remaining   = Math.max(0, Math.floor(hopeMarsProbeData.totalDistance - covered));
-	            var speed       = Math.floor(d.lastObservedSpeed + (d.estimatedSpeed) * (currentTimeStamp - d.lastObservedTime));
+	            var covered     = Math.floor(d.lastObservedDistanceCovered + (d.estimatedDistanceCovered * (currentTimeStamp - d.lastObservedTime)));
+	            var remaining   = Math.max(0, Math.floor(d.lastObservedDistanceLeft + d.estimatedDistanceLeft * (currentTimeStamp - d.lastObservedTime)))
+	            var speed       = Math.max(0, Math.floor(d.lastObservedSpeed + (d.estimatedSpeed) * (currentTimeStamp - d.lastObservedTime)));
 
 	            
 
@@ -648,7 +650,6 @@
 
 	        getJSON('https://admin.emiratesmarsmission.ae/site-data', function(response) {
 	            // console.log('Your public IP address is: ' , response);
-	            // console.log("ggg");
 	            // console.log(response);
 	            if(response && typeof response[0] != "undefined" && response[0] && typeof response[0]["value"] != "undefined" && response[0]["value"]){
 	                hopeMarsProbeData.timeStampToReachMarsOrbit = new Date(response[0]["value"].split(" ").join("T") + "Z");
@@ -663,10 +664,5 @@
 	    }
 
 	})();
-
-
-
-
-
 </script>
 <!--END:  Custom HTML For Hope Mars Probe Mission-->
