Updating Changes to the Git Repo , may be default msg

--- a/tizentest/t1.html
+++ b/tizentest/t1.html
@@ -33,11 +33,11 @@
         document.querySelector(".dd").innerHTML = ua;
       });
     </script>
-    <!-- <style>
+    <style>
       *:not(button):focus {
         outline: 1px solid red !important;
       }
-    </style> -->
+    </style>
     <!--END:  debug scripts-->
   </head>
   <body class="live_stream_page">
@@ -58,7 +58,7 @@
         <!--END:  Logo container-->
         <!-- below line to be remved -->
         <div id="key_results1" style="position: absolute; z-index: 2; left: 50%; background: pink; top: 100px"></div>
-        <h1 class="dd"></h1>
+        <h1 style="color: red" class="dd"></h1>
         <!--START:  title of the live stream-->
         <h1 class="ls_title visibility_hidden">&nbsp;</h1>
         <!--END:  title of the live stream-->
