Updating Changes to the Git Repo , may be default msg

--- a/tizentest/index.html
+++ b/tizentest/index.html
@@ -43,14 +43,14 @@
   </head>
   <body class="live_stream_page">
     <!--START:  main player for the app-->
-    <div class="video_full visibility_hidden page_wrapper">
+    <div class="video_full  page_wrapper">
       <div id="video_full_player" class="video_full_player"></div>
     </div>
 
     <!--END:  main player for the app-->
 
     <!--START:  content for the page-->
-    <div class="page_content page_wrapper">
+    <div class="page_content hide page_wrapper">
       <div class="ls_cont">
         <!--START:  Logo container-->
         <div class="ls_logo_cont">
