--- a/country_header_test/index.html
+++ b/country_header_test/index.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .cc,.cp,.status{
+            font-weight: bold;
+            font-size: 32px;
+        }
+    </style>
 </head>
 <body>
     Welcome to Country Header Test from CDN
+    <br>
+    <br>
     <br>
     <div class="country">I am from <span class="cc">...Loading...</span> </div>
     <br>
